2006-01-23  Vlad Seryakov  <seryakov@users.sf.net>

	* m4/tcl.m4: Fixed bug with extra single quote for
	bash 3.1

2006-01-23  Bernd Eidenschink  <eide@users.sf.net>

	* tcl/sendmail.tcl: Added character encoding for subject and body,
	message-id creation, quoted printable text and AUTH PLAIN
	mechanism (all optional).
	* doc/src/ns_sendmail.man:
	* doc/src/README.doc:
	* doc/man/ns_sendmail.n:
	* doc/html/ns_sendmail.html: Doctools documentation file for new
	ns_sendmail functionality as well as examples created with dtplite

2006-01-20  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/file.tcl: Changes to use new cache API
	* tcl/util.tcl: Added ns_fileread/ns_filewrite procs
	* tcl/stats.tcl: fixed all bugs and it runs now under naviserver
	properly
	* m4/tcl.m4: check for USE_THREAD_ALLOC in tclConfig.sh
	* Makefile: simplify installation  structure, create conf/, logs/,
	tcl/ directories.
	* sample-config.tcl: re-formatted and make it run, added more
	descriptions
	* contrib/nsd.tcl:
	* contrib/mimetypes.tcl: added new example configs
	* include/Makefile.global.in: chanage to simpler installation 
	structure
	* contrib/index.adp: Added default index page

2006-01-19  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/driver.c: Fixed bug in Ns_DriverSockRequest when existing 
	structure is used. Returns NS_ERROR now if cannot parse given url. 

2006-01-18  Vlad Seryakov  <seryakov@users.sf.net>

	* sample-config.tcl: Added spooler/writer related options
	* nsd/driver.c:
	* nsd/nsd.h: Rewrote driver's spooler/writer support
	to make them cleaner and to support multiple spooler/writer
	threads for each driver. Before that, global spooler variables
	got overwritten if multiple drivers are loaded. Also, 
	simplified driver thread, removed rotating driver's list, in 
	case of usual one driver operation that was just waste of CPU
	cycles. For multiple drivers, spawning separate thread for each