@@ -74,6 +74,7 @@ extern Tcl_ObjCmdProc
     NsTclCacheEvalObjCmd,
     NsTclCacheFlushObjCmd,
     NsTclCacheIncrObjCmd,
+    NsTclCacheExistsObjCmd,
     NsTclCacheKeysObjCmd,
     NsTclCacheLappendObjCmd,
     NsTclCacheNamesObjCmd,
@@ -257,6 +258,7 @@ static Cmd basicCmds[] = {
     {"ns_cache_eval", NULL, NsTclCacheEvalObjCmd},
     {"ns_cache_flush", NULL, NsTclCacheFlushObjCmd},
     {"ns_cache_incr", NULL, NsTclCacheIncrObjCmd},
+    {"ns_cache_exists", NULL, NsTclCacheExistsObjCmd},
     {"ns_cache_keys", NULL, NsTclCacheKeysObjCmd},
     {"ns_cache_lappend", NULL, NsTclCacheLappendObjCmd},
     {"ns_cache_names", NULL, NsTclCacheNamesObjCmd},
